--- a/highlight.css
+++ b/highlight.css
@@ -1,83 +1,315 @@
 /*
- * An increased contrast highlighting scheme loosely based on the
- * "Base16 Atelier Dune Light" theme by Bram de Haan
- * (http://atelierbram.github.io/syntax-highlighting/atelier-schemes/dune)
- * Original Base16 color scheme by Chris Kempson
- * (https://github.com/chriskempson/base16)
- */
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+title      Nord highlight.js                                   +
+project    nord-highlightjs                                    +
+version    0.1.0                                               +
+repository https://github.com/arcticicestudio/nord-highlightjs +
+author     Arctic Ice Studio                                   +
+email      development@arcticicestudio.com                     +
+copyright  Copyright (C) 2017                                  +
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-/* Comment */
-.hljs-comment,
-.hljs-quote {
-  color: #575757;
-}
-
-/* Red */
-.hljs-variable,
-.hljs-template-variable,
-.hljs-attribute,
-.hljs-tag,
-.hljs-name,
-.hljs-regexp,
-.hljs-link,
-.hljs-name,
-.hljs-selector-id,
-.hljs-selector-class {
-  color: #d70025;
-}
-
-/* Orange */
-.hljs-number,
-.hljs-meta,
-.hljs-built_in,
-.hljs-builtin-name,
-.hljs-literal,
-.hljs-type,
-.hljs-params {
-  color: #b21e00;
-}
-
-/* Green */
-.hljs-string,
-.hljs-symbol,
-.hljs-bullet {
-  color: #008200;
-}
-
-/* Blue */
-.hljs-title,
-.hljs-section {
-  color: #0030f2;
-}
-
-/* Purple */
-.hljs-keyword,
-.hljs-selector-tag {
-  color: #9d00ec;
-}
-
+[References]
+Nord
+  https://github.com/arcticicestudio/nord
+highlight.js
+  http://highlightjs.readthedocs.io/en/latest/style-guide.html
+  http://highlightjs.readthedocs.io/en/latest/css-classes-reference.html
+*/
 .hljs {
   display: block;
   overflow-x: auto;
-  background: #f6f7f6;
-  color: #000;
   padding: 0.5em;
+  background: #2e3440;
+}
+
+.hljs,
+.hljs-subst {
+  color: #d8dee9;
+}
+
+.hljs-selector-tag {
+  color: #81a1c1;
+}
+
+.hljs-selector-id {
+  color: #8fbcbb;
+  font-weight: bold;
+}
+
+.hljs-selector-class {
+  color: #8fbcbb;
+}
+
+.hljs-selector-attr {
+  color: #8fbcbb;
+}
+
+.hljs-selector-pseudo {
+  color: #88c0d0;
+}
+
+.hljs-addition {
+  background-color: rgba(163, 190, 140, 0.5);
+}
+
+.hljs-deletion {
+  background-color: rgba(191, 97, 106, 0.5);
+}
+
+.hljs-built_in,
+.hljs-type {
+  color: #8fbcbb;
+}
+
+.hljs-class {
+  color: #8fbcbb;
+}
+
+.hljs-function {
+  color: #88c0d0;
+}
+
+.hljs-function > .hljs-title {
+  color: #88c0d0;
+}
+
+.hljs-keyword,
+.hljs-literal,
+.hljs-symbol {
+  color: #81a1c1;
+}
+
+.hljs-number {
+  color: #b48ead;
+}
+
+.hljs-regexp {
+  color: #ebcb8b;
+}
+
+.hljs-string {
+  color: #a3be8c;
+}
+
+.hljs-title {
+  color: #8fbcbb;
+}
+
+.hljs-params {
+  color: #d8dee9;
+}
+
+.hljs-bullet {
+  color: #81a1c1;
+}
+
+.hljs-code {
+  color: #8fbcbb;
 }
 
 .hljs-emphasis {
   font-style: italic;
 }
 
+.hljs-formula {
+  color: #8fbcbb;
+}
+
 .hljs-strong {
   font-weight: bold;
 }
 
-.hljs-addition {
-  color: #22863a;
-  background-color: #f0fff4;
+.hljs-link:hover {
+  text-decoration: underline;
 }
 
-.hljs-deletion {
-  color: #b31d28;
-  background-color: #ffeef0;
+.hljs-quote {
+  color: #4c566a;
+}
+
+.hljs-comment {
+  color: #4c566a;
+}
+
+.hljs-doctag {
+  color: #8fbcbb;
+}
+
+.hljs-meta,
+.hljs-meta-keyword {
+  color: #5e81ac;
+}
+
+.hljs-meta-string {
+  color: #a3be8c;
+}
+
+.hljs-attr {
+  color: #8fbcbb;
+}
+
+.hljs-attribute {
+  color: #d8dee9;
+}
+
+.hljs-builtin-name {
+  color: #81a1c1;
+}
+
+.hljs-name {
+  color: #81a1c1;
+}
+
+.hljs-section {
+  color: #88c0d0;
+}
+
+.hljs-tag {
+  color: #81a1c1;
+}
+
+.hljs-variable {
+  color: #d8dee9;
+}
+
+.hljs-template-variable {
+  color: #d8dee9;
+}
+
+.hljs-template-tag {
+  color: #5e81ac;
+}
+
+.abnf .hljs-attribute {
+  color: #88c0d0;
+}
+
+.abnf .hljs-symbol {
+  color: #ebcb8b;
+}
+
+.apache .hljs-attribute {
+  color: #88c0d0;
+}
+
+.apache .hljs-section {
+  color: #81a1c1;
+}
+
+.arduino .hljs-built_in {
+  color: #88c0d0;
+}
+
+.aspectj .hljs-meta {
+  color: #d08770;
+}
+
+.aspectj > .hljs-title {
+  color: #88c0d0;
+}
+
+.bnf .hljs-attribute {
+  color: #8fbcbb;
+}
+
+.clojure .hljs-name {
+  color: #88c0d0;
+}
+
+.clojure .hljs-symbol {
+  color: #ebcb8b;
+}
+
+.coq .hljs-built_in {
+  color: #88c0d0;
+}
+
+.cpp .hljs-meta-string {
+  color: #8fbcbb;
+}
+
+.css .hljs-built_in {
+  color: #88c0d0;
+}
+
+.css .hljs-keyword {
+  color: #d08770;
+}
+
+.diff .hljs-meta {
+  color: #8fbcbb;
+}
+
+.ebnf .hljs-attribute {
+  color: #8fbcbb;
+}
+
+.glsl .hljs-built_in {
+  color: #88c0d0;
+}
+
+.groovy .hljs-meta:not(:first-child) {
+  color: #d08770;
+}
+
+.haxe .hljs-meta {
+  color: #d08770;
+}
+
+.java .hljs-meta {
+  color: #d08770;
+}
+
+.ldif .hljs-attribute {
+  color: #8fbcbb;
+}
+
+.lisp .hljs-name {
+  color: #88c0d0;
+}
+
+.lua .hljs-built_in {
+  color: #88c0d0;
+}
+
+.moonscript .hljs-built_in {
+  color: #88c0d0;
+}
+
+.nginx .hljs-attribute {
+  color: #88c0d0;
+}
+
+.nginx .hljs-section {
+  color: #5e81ac;
+}
+
+.pf .hljs-built_in {
+  color: #88c0d0;
+}
+
+.processing .hljs-built_in {
+  color: #88c0d0;
+}
+
+.scss .hljs-keyword {
+  color: #81a1c1;
+}
+
+.stylus .hljs-keyword {
+  color: #81a1c1;
+}
+
+.swift .hljs-meta {
+  color: #d08770;
+}
+
+.vim .hljs-built_in {
+  color: #88c0d0;
+  font-style: italic;
+}
+
+.yaml .hljs-meta {
+  color: #d08770;
 }
