--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -122,8 +122,10 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="nord_light">{{ theme_option "Light" }}</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="nord_dark">{{ theme_option "Dark" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="nord_light">{{ theme_option "Nord Light" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="nord_dark">{{ theme_option "Nord Dark" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="navy">{{ theme_option "Navy" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="coal">{{ theme_option "Coal" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">{{ theme_option "Ayu" }}</button></li>
                         </ul>
                         {{#if search_enabled}}
